[package]
name = "immich-untitled-deleter"
version = "0.1.0"
edition = "2021"

[dependencies]
env-file-reader = "0.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
regex = "1.10.3"
